<resources>
    <string name="app_name">Spiice</string>
    <string name="spiice">Spiice</string>
    <string name="discover_the_platform">Discover the platform</string>
    <string name="you_have_an_account_log_in">You have an account ? Log-in</string>
    <string name="skip">Skip</string>
    <string name="pager_text_0">Find projects from companies \neverywhere in the word</string>
    <string name="pager_text_1">Make money while working\non awesome projects</string>
    <string name="pager_text_2">Chat with others freelancers\nand develop your network</string>
    <string name="pager_text_3">Work hard and level up!</string>
    <string name="pager_text_4">Enjoy your progress!</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="log_in_text">Log In</string>
    <string name="password">Password</string>
    <string name="return_to_sign_up">Return to Sign-up</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_bt">Sign Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="obligatoryField">Obligatory field</string>
    <string name="badEmail">Incorrect Email</string>
    <string name="badPassword">Incorrect Password</string>
    <string name="badName">Incorrect Name</string>
    <string name="add_new">Add New</string>
    <string name="log_out">Log Out</string>
    <string name="add_note">Add Note</string>
    <string name="back">Back</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="add">Add</string>
    <string name="_01_01_2020">01/01/2020</string>
    <string name="expand">[expand]</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
</resources>