<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/backBt"
        style="@style/ToolBarBtStyle"
        android:layout_marginStart="15dp"
        android:drawablePadding="8dp"
        android:text="@string/back"
        android:textAlignment="center"
        app:drawableStartCompat="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addNoteTitle"
        style="@style/SpiiceTitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/add_note"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBt" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTIL"
        style="@style/TextInputStyle"
        android:layout_marginTop="39dp"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNoteTitle"
        app:layout_constraintWidth_max="295dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleTIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainPink"
            android:textColor="@color/mainBlack" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/messageContainer"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginTop="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTIL"
        app:layout_constraintWidth_max="295dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/messageTIL"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:hint="@string/message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/messageTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mainPink"
                android:gravity="top"
                android:minHeight="160dp"
                android:textColor="@color/mainBlack" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addBt"
        style="@style/MainButtonStyle"
        android:layout_width="0dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/messageContainer"
        app:layout_constraintVertical_bias="0.70"
        app:layout_constraintWidth_max="263dp" />

</androidx.constraintlayout.widget.ConstraintLayout>