<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <ImageView
        android:id="@+id/logInBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="-31dp"
        app:layout_constraintBottom_toBottomOf="@id/passwordTIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="343dp"
        app:srcCompat="@drawable/blur_background_log_in"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/logInTitle"
        style="@style/SpiiceTitle"
        android:layout_marginTop="32dp"
        android:text="@string/log_in_text"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@id/logInBg"
        app:layout_constraintStart_toStartOf="@id/logInBg"
        app:layout_constraintTop_toTopOf="@id/logInBg" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTIL"
        style="@style/TextInputStyle"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@id/logInBg"
        app:layout_constraintStart_toStartOf="@id/logInBg"
        app:layout_constraintTop_toBottomOf="@+id/logInTitle"
        app:layout_constraintWidth_max="295dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/mainBlack"
            android:background="@color/mainPink"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        style="@style/TextInputStyle"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@id/logInBg"
        app:layout_constraintStart_toStartOf="@id/logInBg"
        app:layout_constraintTop_toBottomOf="@+id/emailTIL"
        app:layout_constraintWidth_max="295dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/mainBlack"
            android:background="@color/mainPink"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logInBt"
        style="@style/MainButtonStyle"
        android:layout_width="0dp"
        android:layout_marginBottom="41dp"
        android:text="@string/log_in"
        app:layout_constraintBottom_toTopOf="@id/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="263dp" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/BottomTextStyle"
        android:layout_marginBottom="94dp"
        android:text="@string/return_to_sign_up"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>