<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBG"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="296dp"
        android:background="@drawable/dialog_bg">

        <TextView
            android:id="@+id/doYouWant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_want_to_delete"
            android:textAlignment="center"
            android:textColor="@color/mainBlack"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="40dp"
            android:paddingVertical="10dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/mainGray"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="26dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doYouWant" />

        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textAlignment="center"
            android:textColor="@color/deleteBT"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="26dp"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel"
            app:layout_constraintTop_toBottomOf="@+id/doYouWant"
            android:paddingVertical="10dp"
            android:paddingHorizontal="40dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>